--- a/researchcn.html
+++ b/researchcn.html
@@ -299,44 +299,36 @@
 				</tr></td>
 				<tr><td>
 					<i>Comfort Assessment Method of EEG-Based Exoskeleton Walking-Assistive Device.</i> Zhou, C., Wang, H., Li, K., Liu, H., and Ye, X. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 675-682. INSTICC, SciTePress.<br>
-					<!--
-					<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
-					<a href="https://www.researchgate.net/publication/378485149_Comfort_Assessment_Method_of_EEG-Based_Exoskeleton_Walking-Assistive_Device" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Comfort+assessment+method+of+eeg-based+exoskeleton+walkingassistive+device" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Comfort-Assessment-Method-of-EEG-Based-Exoskeleton-Wang-Li/8b5a9f82a3210d70ce28ba26dbc0a715a729e14e" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378485149_Comfort_Assessment_Method_of_EEG-Based_Exoskeleton_Walking-Assistive_Device" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0012564800003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=wang2024eeg_exoskeleton&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0012564800003657" target="_blank" rel="noopener noreferrer">10.5220/0012564800003657</a>
 				</tr></td>
 				<tr><td>
 					<i>Can Electromyography Alone Reveal Facial Action Units? A Pilot EMG-Based Action Unit Recognition Study with Real-Time Validation.</i> Veldanda, A., Liu, H., Koschke, R., Schultz, T., and Küster, D. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIODEVICES, pages 142–151. INSTICC, SciTePress.<br>
-					<!--
-					<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
-					<a href="https://www.researchgate.net/publication/378482470_Can_Electromyography_Alone_Reveal_Facial_Action_Units_A_Pilot_EMG-Based_Action_Unit_Recognition_Study_with_Real-Time_Validation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Can+electromyography+alone+reveal+facial+action+units%3F+a+pilot+emg-based+action+unit+recognition+study+with+real-time+validation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Can-Electromyography-Alone-Reveal-Facial-Action-A-Veldanda-Liu/a287e8b8b8b5967ad102cae91278b6d211f0e446" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378482470_Can_Electromyography_Alone_Reveal_Facial_Action_Units_A_Pilot_EMG-Based_Action_Unit_Recognition_Study_with_Real-Time_Validation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0012399100003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=veldanda2024emg_aur&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0012399100003657" target="_blank" rel="noopener noreferrer">10.5220/0012399100003657</a>
 				</tr></td>
 				<tr><td>
 					<i>Really Can't Hold on Anymore? Physiological Indicators Versus Self-Reported Motivation Drop During Jogging.</i> Zhang, S., Kolensnikov, S., Rennspieß, T., Porzel, R., Schultz, T., and Liu, H. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 821-831. INSTICC, SciTePress.<br>
-					<!--
-					<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
-					<a href="https://www.researchgate.net/publication/378485922_Really_Can't_Hold_On_Anymore_Physiological_Indicators_Versus_Self-Reported_Motivation_Drop_During_Jogging" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Really+Can’t+Hold+On+Anymore%3F+Physiological+Indicators+Versus+Self-Reported+Motivation+Drop+During+Jogging" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Really-Can't-Hold-On-Anymore-Physiological-Versus-Zhang-Kolensnikov/8e17b1337ebdea82e39e9cbb4c219cf5405741bc" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378485922_Really_Can't_Hold_On_Anymore_Physiological_Indicators_Versus_Self-Reported_Motivation_Drop_During_Jogging" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0012577300003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=zhang2024motivation_drop&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0012577300003657" target="_blank" rel="noopener noreferrer">10.5220/0012577300003657</a>
 				</tr></td>
 				<tr><td>
 					<i>Associating Endpoint Accuracy and Similarity of Muscle Synergies.</i> Cai, L., Yan, S., Ouyang, C., Zhang, T., Zhu, J., Chen, L., and Liu, H. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 683-694. INSTICC, SciTePress.<br>
-					<!--
-					<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
-					<a href="https://www.researchgate.net/publication/378484411_Associating_Endpoint_Accuracy_and_Similarity_of_Muscle_Synergies" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Associating+endpoint+accuracy+and+similarity+of+muscle+synergies" target=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Associating-Endpoint-Accuracy-and-Similarity-of-Cai-Yan/d804bfcbe0ef878941783c72f1d7113b00e427f8"_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378484411_Associating_Endpoint_Accuracy_and_Similarity_of_Muscle_Synergies" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0012586800003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=cai2024muscle_synergies&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0012586800003657" target="_blank" rel="noopener noreferrer">10.5220/0012586800003657</a>
@@ -344,10 +336,11 @@
 				<tr><td>
 					<i>Integrated Driver Pose Estimation for Autonomous Driving.</i> Cao, X., Hu, W., and Liu, H. (2024).  In BIOSTEC 2024 - Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies - BIOSIGNALS, pages 695-702. INSTICC, SciTePress.<br>
 					<!--
-					<a href="" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
-					<a href="https://www.researchgate.net/publication/378485657_Integrated_Driver_Pose_Estimation_for_Autonomous_Driving" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
+					!-->
+					<a href="https://www.semanticscholar.org/paper/Integrated-Driver-Pose-Estimation-for-Autonomous-Cao-Hu/e6816adff6e19ed4e9e6d8f226bcf0b0713fe2bf" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378485657_Integrated_Driver_Pose_Estimation_for_Autonomous_Driving" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0012639400003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=cao2024driver_pose&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0012639400003657" target="_blank" rel="noopener noreferrer">10.5220/0012639400003657</a>
